--- a/settings.py.sample
+++ b/settings.py.sample
@@ -127,7 +127,7 @@ INSTALLED_APPS = (
     'beergame.bgame',
     'beergame.api',
     # Uncomment the next line to enable the admin:
-    # 'django.contrib.admin',
+    'django.contrib.admin',
     # Uncomment the next line to enable admin documentation:
     # 'django.contrib.admindocs',
 )
